output.txt
execute some python code

**** exec caused exception unexpected indent (<string>, line 1)
format-exc       >>Traceback (most recent call last):
  File "/mnt/WIN_D/for_github/stuffdb/exec_qt.py", line 474, in exec_and_display_print
    result      = exec( code, self.globals, self.locals )
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<string>", line 1
    print( "h" )
IndentationError: unexpected indent
<<
